--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,9 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="acr.browser.lightning"
-    android:versionCode="66"
-    android:versionName="3.2.0.1a" >
+    package="net.kidbox.browser"
+    android:versionCode="1000000"
+    android:versionName="1.0.0.0" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
@@ -31,13 +31,13 @@
         android:targetSdkVersion="20" />
 
     <application
-        android:name="acr.browser.lightning.BrowserApp"
+        android:name="net.kidbox.browser.BrowserApp"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="acr.browser.lightning.MainActivity"
+            android:name="net.kidbox.browser.MainActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/app_name"
@@ -104,7 +104,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="acr.browser.lightning.SettingsActivity"
+            android:name="net.kidbox.browser.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/settings"
             android:theme="@style/DefaultTheme" >
@@ -115,7 +115,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="acr.browser.lightning.AdvancedSettingsActivity"
+            android:name="net.kidbox.browser.AdvancedSettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/advanced"
             android:theme="@style/DefaultTheme" >
@@ -126,7 +126,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="acr.browser.lightning.IncognitoActivity"
+            android:name="net.kidbox.browser.IncognitoActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/app_name"
@@ -140,7 +140,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="acr.browser.lightning.LicenseActivity"
+            android:name="net.kidbox.browser.LicenseActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/licenses"
             android:theme="@style/DefaultTheme" >
@@ -152,7 +152,7 @@
         </activity>
         
         <activity
-            android:name="acr.browser.lightning.BookmarkActivity"
+            android:name="net.kidbox.browser.BookmarkActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/bookmark_settings"
             android:theme="@style/DefaultTheme" >
