--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,9 +35,11 @@
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+    	android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
+        >
         <activity
-            android:name="net.kidbox.browser.MainActivity"
+            android:name="net.kidbox.browser.activities.MainActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/app_name"
@@ -104,7 +106,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="net.kidbox.browser.SettingsActivity"
+            android:name="net.kidbox.browser.activities.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/settings"
             android:theme="@style/DefaultTheme" >
@@ -140,7 +142,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="net.kidbox.browser.LicenseActivity"
+            android:name="net.kidbox.browser.activities.LicenseActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
             android:label="@string/licenses"
             android:theme="@style/DefaultTheme" >
