--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-20
-android.library.reference.1=external/netcipher/libnetcipher
+android.library=true
